--- a/advanced.config
+++ b/advanced.config
@@ -2,19 +2,19 @@
   {rabbit, [{auth_backends, [rabbit_auth_backend_ldap, rabbit_auth_backend_internal]}]},
   {rabbitmq_auth_backend_ldap,
    [ {servers,               ["172.16.0.20"]},
-     {user_dn_pattern,       "cn=${username},ou=RMQ,dc=lx,dc=com"},
+     {user_dn_pattern,       "cn=${username},ou=RMQ,dc=derp,dc=com"},
      {use_ssl,               false},
      {port,                  389},
      {log,                   network},
-     %%{other_bind,            {"cn=ldap,ou=RMQ,dc=lx,dc=com", "Sacofshit1!"}},
+     %%{other_bind,            {"cn=ldap,ou=RMQ,dc=derp,dc=com", "cuklestany"}},
      {vhost_access_query,    {in_group, "cn=${vhost},ou=RMQ,dc=lx,dc=com"}},
      {resource_access_query,
-      {for, [{permission, configure, {in_group, "cn={vhost},ou=RMQ,dc=lx,dc=com"}},
+      {for, [{permission, configure, {in_group, "cn={vhost},ou=RMQ,dc=derp,dc=com"}},
              {permission, write,
-              {for, [{resource, queue,    {in_group, "cn=${vhost},ou=RMQ,dc=lx,dc=com"}},
+              {for, [{resource, queue,    {in_group, "cn=${vhost},ou=RMQ,dc=derp,dc=com"}},
                      {resource, exchange, {constant, true}}]}},
              {permission, read,
-              {for, [{resource, exchange, {in_group, "cn=${vhost},ou=RMQ,dc=lx,dc=com"}},
+              {for, [{resource, exchange, {in_group, "cn=${vhost},ou=RMQ,dc=derp,dc=com"}},
                      {resource, queue,    {constant, true}}]}}
             ]
       }},
