--- a/advanced.config
+++ b/advanced.config
@@ -7,7 +7,7 @@
      {port,                  389},
      {log,                   network},
      %%{other_bind,            {"cn=ldap,ou=RMQ,dc=derp,dc=com", "cuklestany"}},
-     {vhost_access_query,    {in_group, "cn=${vhost},ou=RMQ,dc=lx,dc=com"}},
+     {vhost_access_query,    {in_group, "cn=${vhost},ou=RMQ,dc=herp,dc=com"}},
      {resource_access_query,
       {for, [{permission, configure, {in_group, "cn={vhost},ou=RMQ,dc=derp,dc=com"}},
              {permission, write,
@@ -18,6 +18,6 @@
                      {resource, queue,    {constant, true}}]}}
             ]
       }},
-      {tag_queries, [{administrator, {in_group, "cn=admins,ou=RMQ,dc=lx,dc=com"}},{management, {constant, true}}]}
+      {tag_queries, [{administrator, {in_group, "cn=admins,ou=RMQ,dc=derp,dc=com"}},{management, {constant, true}}]}
    ]
   }
