--- a/advanced.config
+++ b/advanced.config
@@ -2,22 +2,16 @@
   {rabbit, [{auth_backends, [rabbit_auth_backend_ldap, rabbit_auth_backend_internal]}]},
   {rabbitmq_auth_backend_ldap,
    [ {servers,               ["172.16.0.20"]},
-     {user_dn_pattern,       "cn=${username},ou=RMQ,dc=derp,dc=com"},
+     {user_dn_pattern,       "${username}@herp.com"},
      {use_ssl,               false},
      {port,                  389},
      {log,                   network},
-     %%{other_bind,            {"cn=ldap,ou=RMQ,dc=derp,dc=com", "cuklestany"}},
-     {vhost_access_query,    {in_group, "cn=${vhost},ou=RMQ,dc=herp,dc=com"}},
-     {resource_access_query,
-      {for, [{permission, configure, {in_group, "cn={vhost},ou=RMQ,dc=derp,dc=com"}},
-             {permission, write,
-              {for, [{resource, queue,    {in_group, "cn=${vhost},ou=RMQ,dc=derp,dc=com"}},
-                     {resource, exchange, {constant, true}}]}},
-             {permission, read,
-              {for, [{resource, exchange, {in_group, "cn=${vhost},ou=RMQ,dc=derp,dc=com"}},
-                     {resource, queue,    {constant, true}}]}}
-            ]
-      }},
-      {tag_queries, [{administrator, {in_group, "cn=admins,ou=RMQ,dc=derp,dc=com"}},{management, {constant, true}}]}
+     {dn_lookup_base, "ou=People,dc=herp,dc=com"},
+	   {dn_lookup_attribute, "userPrincipalName"},
+     {group_lookup_base, "ou=Groups,dc=herp,dc=com"},
+     {vhost_access_query, {'or',   [{in_group, "cn=res_rabbitmq_${vhost},ou=Groups,dc=herp,dc=com"},
+        	 {in_group, "cn=rmq_admins,ou=Groups,dc=lab,dc=com"}]}},
+     {resource_access_query, {constant, true}},
+      {tag_queries, [{administrator, {in_group, "cn=admins,ou=Groups,dc=derp,dc=com"}},{management, {constant, true}}]}
    ]
   }
